--- a/client/public/front-end/src/component/assets/style.css
+++ b/client/public/front-end/src/component/assets/style.css
@@ -3,6 +3,14 @@
 @tailwind components;
 @tailwind utilities;
 
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
 /* // Styling for the card element */
 .card {
     background-color: white;
@@ -134,4 +142,54 @@ Styling for the card element on hover */
     svg.h-6.w-6.text-white {
         margin: 0 auto;
     }
+
+    .container {
+        padding: 0 1rem;
+    }
+}
+
+
+.flexcol {
+    margin-top: 20px;
+    margin-right: 42%;
+}
+
+.white-text {
+    color: white;
+    font-size: 20px;
+}
+
+.mr-25 {
+    margin-right: 15%;
+    margin-bottom: 14%;
+}
+.font-w {
+    font-Size: 44px;
+}
+.font {
+    color: white;
+}
+.bottom{
+    background-color: hsl(228deg 11.81% 24.9%);
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    margin-bottom: 13px;
+}
+.bottom-left {
+    color: white;
+    margin-Left: 5%;
+}
+.bottom-middle{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 5%;
+}
+.bottom-middle-cenetr {
+    transform: rotate(45deg);
+    display: flex;
+    justify-content: center;
+}
+.bottom-right{
+    color: white;
+    margin-right: 5%;
 }
