--- a/client/public/front-end/src/component/assets/style.css
+++ b/client/public/front-end/src/component/assets/style.css
@@ -114,6 +114,7 @@ Styling for the card element on hover */
     right: 0;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
+    margin: 0 0 0 0 ;
 }
 
 
@@ -242,6 +243,7 @@ Styling for the card element on hover */
 .white-text {
     color: white;
     font-size: 20px;
+    margin-left: 15%;
 }
 
 .mr-25 {
@@ -441,4 +443,7 @@ Styling for the card element on hover */
     width: 100%;
     height: 1px;
     margin: 0 auto;
+}
+.footer-component{
+    margin-top: 42%;
 }
