--- a/client/public/front-end/src/component/assets/style.css
+++ b/client/public/front-end/src/component/assets/style.css
@@ -400,6 +400,8 @@ Styling for the card element on hover */
     font-style: normal;
     letter-spacing: normal;
     line-height: 33.63px;
+    display: inline;
+    white-space: nowrap;
 
 }
 
@@ -494,7 +496,7 @@ Styling for the card element on hover */
     color: white;
     font-size: 24px;
     margin-left: 6%;
-    
+
 }
 
 .bottom-left {
@@ -578,7 +580,7 @@ Styling for the card element on hover */
     }
 
     .icon-description-card {
-        margin-left: 30px;
+        margin-left: 0px;
         text-align: center;
         margin-bottom: 7%;
     }
@@ -597,12 +599,12 @@ Styling for the card element on hover */
         margin-right: 30px;
         margin-bottom: 10px;
         color: #ffffff;
-        margin-top: 30px;
+        margin-top: 90px;
     }
 
     .bottom-middle-card {
         margin-bottom: 1%;
-        margin-top: 1px;
+        margin-top: 90px;
 
     }
 
@@ -620,8 +622,12 @@ Styling for the card element on hover */
     .bottom-right-card-sunrise {
         margin-left: 30px;
         margin-bottom: 6px;
-        margin-top: 40px;
+        margin-top: 90px;
         margin-right: 0%;
+    }
+
+    .middle-card {
+        display: inline;
     }
 
     .border-l-2 {
@@ -637,8 +643,28 @@ Styling for the card element on hover */
     }
 
     .bottom-crd {
-        height: 300%;
+        height: 590px;
         margin-bottom: 0px;
+    }
+
+    .border-l-2 {
+        border-left: 2px solid #515566;
+        margin-top: 25%;
+    }
+    .border-l-2-main{
+        margin-top: 0%;
+    }
+
+    .subcrd-line-devider {
+        margin-right: 35.3px;
+    }
+
+    .bottom-middle-content {
+        display: inline-block;
+        white-space: nowrap;
+    }
+    .icon-font {
+        margin-top: 20%;
     }
 }
 
