--- a/client/public/front-end/src/component/assets/style.css
+++ b/client/public/front-end/src/component/assets/style.css
@@ -14,6 +14,7 @@ body {
     background-size: 100% auto;
     background-color: rgb(30 32 39);
     opacity: 1;
+    font-family: "Open Sans";
 }
 
 .xcol {
@@ -80,6 +81,22 @@ body {
     transform: scale(1);
     border-radius: 0.5rem;
     cursor: pointer;
+    height: 288px;
+    width: 467px;
+}
+
+.middle-crd {
+    height: 35%;
+}
+
+.home-font {
+    font-family: "Open Sans";
+    font-size: 29px;
+    font-weight: 700;
+    font-style: normal;
+    letter-spacing: normal;
+    line-height: normal;
+    text-transform: capitalize;
 }
 
 .card-bg {
@@ -88,6 +105,7 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100% auto;
+    height: 100%;
 }
 
 .weather-card:hover {
@@ -375,9 +393,14 @@ Styling for the card element on hover */
 
 .white-text {
     color: white;
-    font-size: 20px;
-    margin-left: 15%;
+    margin-left: 10%;
     text-transform: capitalize;
+    font-family: "Open Sans";
+    font-size: 15px;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: normal;
+    line-height: normal;
 }
 
 .mr-25 {
@@ -562,114 +585,6 @@ Styling for the card element on hover */
     font-weight: bold;
 }
 
-/* @media only screen and (max-width: 1067px) {
-    .mr-2-2 {
-        margin-left: 30px;
-        margin-right: 20px;
-        margin-bottom: 18%;
-    }
-
-    .bottom-left-city {
-        margin-left: 0;
-        height: 110px;
-    }
-
-    .bottom-right-card {
-        margin-right: 0;
-        margin-left: 10px;
-    }
-
-    .icon-description-card {
-        margin-left: 0px;
-        text-align: center;
-        margin-bottom: 7%;
-    }
-
-    .Right-side-section-card {
-        margin-right: 30px;
-        margin-top: 0%;
-        text-align: center;
-        margin-bottom: 10px;
-        margin-top: 10px;
-    }
-
-    .bottom-left-sub-card {
-        margin-left: 40px;
-        text-align: center;
-        margin-right: 30px;
-        margin-bottom: 10px;
-        color: #ffffff;
-        margin-top: 90px;
-    }
-
-    .bottom-middle-card {
-        margin-bottom: 1%;
-        margin-top: 90px;
-
-    }
-
-    .bottom-middle-sub {
-        transform: rotate(10);
-    }
-
-    .bottom-right-card {
-        margin-left: 30px;
-        margin-bottom: 12px;
-        margin-top: 5px;
-        margin-right: 0%;
-    }
-
-    .bottom-right-card-sunrise {
-        margin-left: 30px;
-        margin-bottom: 6px;
-        margin-top: 90px;
-        margin-right: 0%;
-    }
-
-    .middle-card {
-        display: inline;
-    }
-
-    .border-l-2 {
-        border-left: 2px solid white;
-    }
-
-    .h-8 {
-        height: 30px;
-    }
-
-    .Degree-card {
-        height: 60px;
-    }
-
-    .bottom-crd {
-        height: 590px;
-        margin-bottom: 0px;
-    }
-
-    .border-l-2 {
-        border-left: 2px solid #515566;
-        margin-top: 25%;
-    }
-
-    .border-l-2-main {
-        margin-top: 0%;
-    }
-
-    .subcrd-line-devider {
-        margin-right: 35.3px;
-    }
-
-    .bottom-middle-content {
-        display: inline-block;
-        white-space: nowrap;
-    }
-
-    .icon-font {
-        margin-top: 20%;
-    }
-} */
-
 .footer {
     background-color: #30333d;
     color: #fff;
@@ -723,7 +638,7 @@ Styling for the card element on hover */
         margin-bottom: 10px;
     }
 
-    .header{
+    .header {
         display: inline;
     }
 
